[package]
name = "mime_multipart"
version = "0.10.0"
description = "MIME multipart parsing, construction, and streaming"
authors = ["Mike Dilger <mike@optcomp.nz>", "Gunnar Westerling <gunnarwesterling@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gw-de/mime-multipart"
documentation = "https://github.com/gw-de/mime-multipart"
license = "MIT OR Apache-2.0"
keywords = ["mime", "multipart", "mixed"]
edition = "2021"

[dependencies]
log = "*"
http = "1"
mime = "0.3"
httparse = "1.3"
textnonce = "1.0"
buf-read-ext = "0.4"
tempfile = "3.15.0"
