[package]
name = "mime-multipart-hyper1"
version = "0.10.0"
description = "MIME multipart parsing, construction, and streaming compatible with hyper v1.x (fork of mime_multipart crate)"
authors = ["Mike Dilger <mike@optcomp.nz>", "Gunnar Westerling <gunnarwesterling@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gw-de/mime-multipart-hyper1"
documentation = "https://github.com/gw-de/mime-multipart-hyper1"
license = "MIT OR Apache-2.0"
keywords = ["mime", "multipart", "mixed"]
edition = "2021"

[dependencies]
log = "0.4"
http = "1"
mime = "0.3"
httparse = "1.9"
textnonce = "1.0"
buf-read-ext = "0.4"
tempfile = "3.15.0"
